--- a/QuanLyDeTai/QuanLyDeTai.csproj
+++ b/QuanLyDeTai/QuanLyDeTai.csproj
@@ -131,6 +131,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\aaaaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\Teacher\QuanLyThongTinGiaoVienController.cs" />
     <Compile Include="Global.asax.cs">
@@ -2370,6 +2371,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\aaaa\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
