--- a/QuanLyDeTai/bin/QuanLyDeTai.dll.config
+++ b/QuanLyDeTai/bin/QuanLyDeTai.dll.config
@@ -57,9 +57,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    
-    <add name="QuanLyDeTaiEntities" connectionString="metadata=res://*/Models.EFDatabaseFirst.csdl|res://*/Models.EFDatabaseFirst.ssdl|res://*/Models.EFDatabaseFirst.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DKDT_CNPM;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+	  
+  <add name="QuanLyDeTaiEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-MGUBVM0I\SQLEXPRESS;initial catalog=DKDT_CNPM;persist security info=True;user id=mylan;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -70,4 +69,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
